refactor for Java 8